# cardealer

./: .gitignore  Dealer.csv  Dockerfile  README.md  docker-compose.yaml  dockerfile  hello.py  inventory.ini  playbook.yaml  playbook_deploy.yaml  pyproject.toml  trylocust.py
blog/: admin.py  models.py  urls.py  views.py
blog/management/commands/: dummycar.py
blog/migrations/: 0001_initial.py  0002_cart_cartitem.py  0003_cartitem_quantity.py  0004_car_quantity.py
blog/templatetags/: custom_filters.py
core/: settings.py  urls.py
templates/: add_car.html  base.html  checkout.html  checkout_complete.html  dealer.html  edit_car.html  home.html  view_cart.html
templates/registration/: login.html  signup.html
user_auth/: urls.py  views.py
