[project]
name = "cardealer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.3.0",
    "django>=5.1.6",
    "djangorestframework>=3.16.0",
    "locust>=2.37.4",
    "markdown>=3.8",
    "psycopg2-binary>=2.9.10",
]
